@@ -1,0 +1,60 @@
+<table class="gallery" cellspacing="0" cellpadding="0">
+<tr>
+<td>
+<div class="center">
+<div class="thumb tnone">
+<div class="thumbinner" style="width:122px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-200px.jpg" width="120" height="80" alt="" /></a></div>
+</div>
+</div>
+<div class="gallerytext">
+<p>Item 1</p>
+</div>
+</td>
+<td>
+<div class="center">
+<div class="thumb tnone">
+<div class="thumbinner" style="width:122px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-200px.jpg" width="120" height="80" alt="" /></a></div>
+</div>
+</div>
+<div class="gallerytext">
+<p>a link to <a href="/wiki/en/Example1" title="Example1">Example1</a></p>
+</div>
+</td>
+<td>
+<div class="center">
+<div class="thumb tnone">
+<div class="thumbinner" style="width:122px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-200px.jpg" width="120" height="80" alt="Test Image.jpg" /></a></div>
+</div>
+</div>
+</td>
+<td>
+<div class="center">
+<div class="thumb tnone">
+<div class="thumbinner" style="width:122px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-200px.jpg" width="120" height="80" alt="Test Image.jpg" /></a></div>
+</div>
+</div>
+</td>
+</tr>
+<tr>
+<td>
+<div class="center">
+<div class="thumb tnone">
+<div class="thumbinner" style="width:122px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-200px.jpg" width="120" height="80" alt="" /></a></div>
+</div>
+</div>
+<div class="gallerytext">
+<p><i>italic caption</i></p>
+</div>
+</td>
+<td>
+<div class="center">
+<div class="thumb tnone">
+<div class="thumbinner" style="width:122px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-200px.jpg" width="120" height="80" alt="" /></a></div>
+</div>
+</div>
+<div class="gallerytext">
+<p>on page &quot;Gallery1&quot;</p>
+</div>
+</td>
+</tr>
+</table>
