@@ -3,6 +3,7 @@
 
 New Features:
 
+  * Add support for the Mediawiki <gallery> tag for generating image galleries.
   * Remove ability to automatically upgrade from versions prior to 0.9.0.
 
 Bugfixes:
